# trial-task-social-main

./: .gitignore  CHANGELOG.md  README.md  SOLUTION.md
backend-py/: Makefile  pyproject.toml
backend-py/src/: config.py  generate.py  main.py  openai.py
backend-ts/: package-lock.json  package.json  vitest.config.ts
backend-ts/src/: generate.ts  openai.ts  server.ts  types.ts  validation.ts  webResearch.ts
backend-ts/tests/: api.test.ts  validation.test.ts
backend-ts/tests/integration/: api.test.ts
backend-ts/tests/unit/: validation.test.ts
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: api.ts  validation.ts
frontend/src/app/: page.tsx
frontend/tests/: api.test.ts  setup.ts  validation.test.ts
frontend/tests/unit/: api.test.ts  validation.test.ts
